# langres

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCS.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: langres-code-reviewer.md  tdd-agent.md
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: CHANGELOG.md  DOCS.md  FRICTION_LOG.md  FUTURE.md  ISSUES.md  POC.md  PROJECT_OVERVIEW.md  RESOURCES.md  TECHNICAL_OVERVIEW.md  USE_CASES.md  index.md
examples/: README.md  basic_usage.py  blocker_evaluation_comprehensive.py  blocker_evaluation_demo.py  blocking_evaluation_cached_with_instructions.py  blocking_evaluation_comprehensive_comparison.py  blocking_evaluation_faiss_vs_qdrant.py  blocking_evaluation_results.json  blocking_evaluation_results_reranking.json  blocking_evaluation_with_instructions.py  blocking_evaluation_with_reranking.py  cached_embedder_demo.py  compare_embedders_for_funders.py  debug_pipeline.py  deduplication_cached_faiss_simple.py  deduplication_example.py  deduplication_iteration_05.py  deduplication_with_blocker_optimization.py  instruction_embeddings_demo.py  phase1_blocker_optimization.py  phase2_full_pipeline.py  progressive_pipeline_building.py
examples/data/: companies.json  companies_labels.json  funder_name_deduplicated_groups.json  funder_names_with_ids.json
src/langres/: __init__.py
src/langres/clients/: __init__.py  llm.py  settings.py  tracking.py
src/langres/core/: __init__.py  analysis.py  blocker.py  clusterer.py  debugging.py  diagnostics.py  embeddings.py  hybrid_vector_index.py  metrics.py  models.py  module.py  reports.py  reranking_vector_index.py  vector_index.py
src/langres/core/blockers/: __init__.py  all_pairs.py  vector.py
src/langres/core/indexes/: __init__.py  hybrid_vector_index.py  reranking_vector_index.py
src/langres/core/modules/: __init__.py  cascade.py  llm_judge.py  rapidfuzz.py
src/langres/core/optimizers/: __init__.py  blocker_optimizer.py
src/langres/data/: __init__.py  loaders.py  schemas.py  splitting.py
src/langres/plotting/: __init__.py  blockers.py
tests/: __init__.py  conftest.py  test_all_pairs_blocker.py  test_ercandidate_model.py  test_example.py  test_integration_approach1.py  test_integration_approach3.py  test_progressive_pipeline_building_example.py  test_ranking_metrics.py  test_rapidfuzz_module.py
tests/clients/: test_llm.py  test_settings.py  test_tracking.py
tests/core/: __init__.py  test_analysis.py  test_blocker.py  test_blocker_evaluation.py  test_cached_embedder.py  test_clusterer.py  test_clusterer_inspect.py  test_debugging.py  test_diagnostics.py  test_embeddings.py  test_evaluation_reports.py  test_hybrid_vector_index.py  test_metrics.py  test_models.py  test_module.py  test_reports.py  test_reranking_vector_index.py  test_sparse_embeddings.py  test_vector_index.py
tests/core/blockers/: __init__.py  test_all_pairs.py  test_all_pairs_inspect.py  test_vector.py  test_vector_blocker_scores.py  test_vector_inspect.py
tests/core/indexes/: __init__.py  test_hybrid_vector_index.py  test_reranking_vector_index.py  test_vector_index.py
tests/core/modules/: __init__.py  test_cascade.py  test_llm_judge.py  test_llm_judge_async.py  test_llm_judge_inspect.py  test_rapidfuzz.py
tests/core/optimizers/: test_blocker_optimizer.py
tests/data/: __init__.py  test_loaders.py  test_loaders_new.py  test_schemas.py  test_splitting.py  test_splitting_new.py
tests/fixtures/: __init__.py  companies.py
tests/integration/: __init__.py  test_approach1_e2e.py
tests/plotting/: __init__.py  test_blockers.py
